--- a/css/ngDialog.css
+++ b/css/ngDialog.css
@@ -111,8 +111,3 @@
   content: '\00D7';
   cursor: pointer;
 }
-
-html.ngdialog-open,
-body.ngdialog-open {
-  overflow: hidden;
-}
